# selfhosted-runner-swarm

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  example.config.yml
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-analyst.md
.claude/commands/: deploy.md  fix-issue.md  review.md
.claude/rules/: code-style.md  docker.md  documentation.md  testing.md
.claude/skills/deploy/: skill.md
.claude/skills/security-review/: skill.md
.github/workflows/: ci.yml
claudedocs/: INDEX.md
orchestrator/: Dockerfile  orchestrator.py  pyproject.toml
orchestrator/rorch/: __init__.py  __main__.py  config.py  docker_client.py  github_client.py  protocols.py  scaler.py
orchestrator/tests/: __init__.py  conftest.py  test_config.py  test_docker_client.py  test_scaler.py
runner-image/: Dockerfile  entrypoint.sh
scripts/: build-runner.sh  check-deps.sh  license-header.sh  pre-commit-license
